<resources>
    <string name="app_name">User</string>
    <string name="paperclip">Paperclip</string>
    <string name="hello">Hello....!</string>
    <string name="sing_up">sing up</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_userid_and_password">Please enter your Phone number and Password</string>
    <string name="phone_number">Phone number</string>
    <string name="send">Send</string>
    <string name="enter_your_modile_number_to_get_otp">Enter your modile number to get OTP</string>
    <string name="lk">+91</string>
    <string name="random">96XXXXXXX3</string>
    <string name="get_otp">Get otp</string>
    <string name="chgcgh">Log in</string>
    <string name="ffhgfgnvhnv">Log in</string>
    <string name="sdzfgyf">Password</string>
    <string name="sdfghgfdxfgh">Otp verification</string>
    <string name="xgfchjuijhjghf">6 digit OTP</string>
    <string name="ftdfguio">Verifi</string>
    <string name="dfghhgcv">Send OTP</string>
    <string name="zxchjkj">Create_password</string>
    <string name="ijh">Create Password</string>
    <string name="okjhgfdxcv">Enter your password for your new paperclipa server provider account</string>
    <string name="ojihgffcg">Password</string>
    <string name="lkjhgvbn">Confirm</string>
    <string name="KJHG">SUBMIT</string>
    <string name="see_more">see more</string>


    <string-array name="pincode">
        <item>721301</item>
        <item>713321</item>
        <item>713217</item>
        <item>722055</item>
        <item>700042</item>
    </string-array>
</resources>