<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Choice"
    android:scrollbars="none"
    android:background="@drawable/backg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/hello"
            android:textColor="#0E0E0E"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="185dp"
            android:layout_height="166dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/handshake" />


        <Button
            android:id="@+id/sing_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/bgbot"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/sing_up"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/bgbot"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/chgcgh"
            android:textAlignment="center"
            android:textSize="20sp" />


    </LinearLayout>
</ScrollView>
