<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Otpverifi"
    android:scrollbars="none"
    android:background="@drawable/backg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="218dp"
            android:layout_height="176dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/otp" />

        <TextView
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/baloo_chettan"
            android:text="@string/sdfghgfdxfgh"
            android:textColor="#0E0E0E"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shownumb"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/baloo_chettan"
            android:textColor="#0E0E0E"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/bgbox">

            <EditText
                android:id="@+id/otpwrt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/xgfchjuijhjghf"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/otpverifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:background="@drawable/bgbot"
                android:fontFamily="@font/baloo_chettan"
                android:text="@string/ftdfguio"
                android:textAlignment="center"
                android:textSize="20sp" />



            <ProgressBar
                android:id="@+id/prgbarotp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>


    </LinearLayout>
</ScrollView>
